Convert starting point related state and logic into redux store

--- a/.env.sample
+++ b/.env.sample
@@ -3,3 +3,7 @@ REACT_APP_GOOGLE_MAP_API_KEY=
 
 # server url of backend server
 REACT_APP_SERVER_URL=
+
+
+# Enviroment either DEVELOPMENT or PRODUCTION, DEVELOPMENT will give you debug message from redux and @welldone-software/why-did-you-render
+REACT_APP_ENV=
