--- a/package.json
+++ b/package.json
@@ -15,9 +15,10 @@
     "react": "^18.2.0",
     "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux-logger": "^3.0.6",
     "sass": "^1.66.1",
     "use-places-autocomplete": "^4.0.1",
